Make the minimum font size preference leave font-size:0 untouched.  b=401046  r+sr=bzbarsky  a=schrep